fixed padding on body (top). nav overlapped site

--- a/client/src/styling/main.scss
+++ b/client/src/styling/main.scss
@@ -30,12 +30,14 @@
   }
   
   main {
+    padding-top: 55px;
     position: relative;
     flex: 1;
   }
 
 
 body {
+  
     background-color: $mainColor;
     color: white;
 }
